--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,23 @@ body {
   z-index: 1;
 }
 
+
+#factimage1
+{
+  float: left;
+}
+
+#factimage3
+{
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#factimage2
+{
+  float: right;
+}
+
 .dropdown-content a {
   float: none;
   color: black;
@@ -99,14 +116,11 @@ nav {
 h2 { font-family: "garamond"; font-size: 50px; color: #080F0F; font-weight:"bold";
 }
 
-#aboutustext { font-family: "garamond"; font-size: 25px; color: #080F0F
-
+#aboutustext {
+  font-family: "garamond"; font-size: 25px; color: #080F0F
 }
 
 #colFormLabelSm {
   border: 2px;
   border-radius: 4px;
-}
-#factimage3 {
-  width: 250px
 }
